Fixed navbar disappearing issue and fixed video cells on mobile

--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -9,10 +9,6 @@ body {
   min-height: 100% !important;
 }
 
-.col-lg-3 {
-  padding: 0;
-}
-
 .award a {
   text-decoration: none !important;
 }
